Day37/infra/terraform/ec2.tf
provider "aws" {
  region = "ap-south-1"
}

resource "aws_instance" "example" {
  ami                         = "ami-0f5ee92e2d63afc18" # placeholder
  instance_type               = "t2.micro"
  subnet_id                   = "subnet-xxxxxxxx"       # placeholder
  vpc_security_group_ids      = [aws_security_group.web_ssh_http.id]
  associate_public_ip_address = true

  tags = {
    Name = "Day37-EC2"
  }
}
